--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,10 @@ universal = 1
 [flake8]
 # W503: Line break before operator
 ignore = W503
+max-line-length = 120
+
+[semantic_release]
+branch = main
+version_variable = click_logging/__init__.py:__version__
+commit_subject = chore(release): release v{version}
+commit_author = github-actions <actions@github.com>
